test: style fixes for overlapping nav items

--- a/style.css
+++ b/style.css
@@ -102,7 +102,11 @@ em{
     "pst"
     "sm sm";
     grid-area: sd;
-    margin-right: 1em;
+    /* margin-right: 1em; */
+}
+
+.navbar .nested-box{
+    width: 187px;
 }
 
 .intro{
@@ -120,10 +124,10 @@ em{
     color: rgb(122, 57, 57);
     background-color: rgb(245, 250, 250, 0.27);
     display: inherit;
-    padding: .4em .5em;
+    /* padding: .4em .5em; */
     margin-top: 2px;
     margin-bottom: 2px;
-    margin-right: 1.7em;
+    /* margin-right: 1.7em; */
     font-size: 11px;
     line-height: 0;
     white-space: nowrap;
@@ -151,8 +155,7 @@ em{
     font-size: 10px; 
 }
 
-.logo{
-    width: 1fr;    
+.logo{  
     display: flex;
     text-align: center;
     font-family: 'Dosis', sans-serif;
